--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -50,7 +50,7 @@ $theme-colors: (
 );
 
 $body-color: #333 !default;
-$body-bg: $gray-25 !default;
+$body-bg: #FCFCFC !default;
 $enable-shadows: false;
 $enable-responsive-font-sizes: true;
 $font-family-sans-serif: Inter, sans-serif !default;
