--- a/admin/app/views/spree/admin/coupon_codes/index.html.erb
+++ b/admin/app/views/spree/admin/coupon_codes/index.html.erb
@@ -42,7 +42,7 @@
       <div class="table-responsive">
         <% if @coupon_codes.any? %>
           <table class="table">
-            <thead class="text-muted">
+            <thead>
             <tr data-hook="rate_header">
               <th><%= Spree.t(:code) %></th>
               <th><%= Spree.t(:used) %></th>
