--- a/admin/app/views/spree/admin/custom_domains/_custom_domains.html.erb
+++ b/admin/app/views/spree/admin/custom_domains/_custom_domains.html.erb
@@ -1,7 +1,7 @@
 <% if current_store.custom_domains.any? %>
   <div class="table-responsive rounded mt-3 border">
     <table class="table">
-      <thead class="text-muted">
+      <thead>
         <tr>
           <th><%= Spree.t(:name) %></th>
           <th>Active?</th>
