--- a/admin/app/views/spree/admin/customer_returns/index.html.erb
+++ b/admin/app/views/spree/admin/customer_returns/index.html.erb
@@ -20,7 +20,7 @@
   <% if @collection.any? %>
     <div class="table-responsive">
       <table class="table">
-        <thead class="text-muted">
+        <thead>
           <tr data-hook="rate_header">
             <th><%= Spree.t(:number) %></th>
             <th><%= Spree.t(:created_at) %></th>
