--- a/admin/app/views/spree/admin/exports/index.html.erb
+++ b/admin/app/views/spree/admin/exports/index.html.erb
@@ -4,7 +4,7 @@
   <% if @collection.any? %>
     <div class="table-responsive">
       <table class="table">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th><%= Spree.t(:number) %></th>
             <th class="text-center"><%= Spree.t(:kind) %></th>
