--- a/admin/app/views/spree/admin/option_types/index.html.erb
+++ b/admin/app/views/spree/admin/option_types/index.html.erb
@@ -18,7 +18,7 @@
   <% if @option_types.any? %>
     <div class="table-responsive">
       <table class="table" id="listing_option_types">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th class="no-border handel-head"></th>
             <th><%= Spree.t(:internal_name) %></th>
