--- a/admin/app/views/spree/admin/orders/_refunds.html.erb
+++ b/admin/app/views/spree/admin/orders/_refunds.html.erb
@@ -10,7 +10,7 @@
     <div class="card-body p-0">
       <div class="table-responsive">
         <table class="table table-condensed" id='refunds' data-order-id='<%= @order.number %>'>
-          <thead class="text-muted">
+          <thead>
             <tr data-hook="refunds_header" class="border-bottom">
               <th><%= Spree.t(:amount) %></th>
               <th><%= Spree.t(:status) %></th>
