--- a/admin/app/views/spree/admin/orders/return_authorizations/_form.html.erb
+++ b/admin/app/views/spree/admin/orders/return_authorizations/_form.html.erb
@@ -3,7 +3,7 @@
 <div data-controller="return-items">
   <div class="table-responsive card-lg mb-4">
     <table class="table table-condensed return-items-table">
-      <thead class="text-muted">
+      <thead>
         <tr>
           <th>
             <% if allow_return_item_changes %>
