--- a/admin/app/views/spree/admin/orders/return_authorizations/show.html.erb
+++ b/admin/app/views/spree/admin/orders/return_authorizations/show.html.erb
@@ -27,7 +27,7 @@ locals: {
 <div class="card-lg mb-4">
   <div class="table-responsive">
     <table class="table table-condensed return-items-table">
-      <thead class="text-muted">
+      <thead>
         <tr>
           <th><%= Spree.t(:product) %></th>
           <th><%= Spree.t(:status) %></th>
@@ -102,7 +102,7 @@ locals: {
     </div>
     <div class="card-body p-0">
       <table class="table table-condensed">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th><%= Spree.t(:reimbursement_type) %></th>
             <th><%= Spree.t(:description) %></th>
