--- a/admin/app/views/spree/admin/payment_methods/index.html.erb
+++ b/admin/app/views/spree/admin/payment_methods/index.html.erb
@@ -5,7 +5,7 @@
 <div class="card-lg">
   <div class="table-responsive">
     <table class="table">
-      <thead class="text-muted">
+      <thead>
       <tr>
         <th></th>
         <th><%= Spree.t(:payment_method) %></th>
@@ -25,7 +25,7 @@
   <div class="card-lg">
     <div class="table-responsive">
       <table class="table">
-        <thead class="text-muted">
+        <thead>
         <tr>
           <th><%= Spree.t(:name) %></th>
           <th><%= Spree.t(:description) %></th>
