--- a/admin/app/views/spree/admin/post_categories/index.html.erb
+++ b/admin/app/views/spree/admin/post_categories/index.html.erb
@@ -8,7 +8,7 @@
   <div class="card-lg">
     <div class="table-responsive rounded-lg">
       <table class="table">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th class="w-90"><%= Spree.t(:title) %></th>
             <th></th>
