--- a/admin/app/views/spree/admin/posts/index.html.erb
+++ b/admin/app/views/spree/admin/posts/index.html.erb
@@ -11,7 +11,7 @@
   <% if @collection.any? %>
     <div class="table-responsive rounded-lg">
       <table class="table">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th><%= Spree.t(:title) %></th>
             <th><%= Spree.t(:category) %></th>
