--- a/admin/app/views/spree/admin/products/_list.html.erb
+++ b/admin/app/views/spree/admin/products/_list.html.erb
@@ -6,7 +6,7 @@
 
         <div class="table-responsive">
           <table class="table" id="listing_products">
-            <thead class="text-muted">
+            <thead>
               <tr>
                 <th scope="col" class="pr-0 w-5">
                   <%= bulk_operations_select_all_checkbox %>
