--- a/admin/app/views/spree/admin/promotions/index.html.erb
+++ b/admin/app/views/spree/admin/promotions/index.html.erb
@@ -12,7 +12,7 @@
   <% if @collection.any? %>
     <div class="table-responsive">
       <table class="table">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th><%= Spree.t(:name) %></th>
             <th><%= Spree.t(:code) %></th>
