--- a/admin/app/views/spree/admin/properties/index.html.erb
+++ b/admin/app/views/spree/admin/properties/index.html.erb
@@ -22,7 +22,7 @@
   <% if @properties.present? %>
     <div class="table-responsive">
       <table class="table">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th class="no-border handel-head"></th>
             <th><%= Spree.t(:internal_name) %></th>
