--- a/admin/app/views/spree/admin/reimbursements/edit.html.erb
+++ b/admin/app/views/spree/admin/reimbursements/edit.html.erb
@@ -22,7 +22,7 @@ locals: {
     </div>
     <div class="card-body p-0">
       <table class="table table-condensed reimbursement-return-items-table">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th><%= Spree.t(:product) %></th>
             <th><%= Spree.t(:preferred_reimbursement_type) %></th>
