--- a/admin/app/views/spree/admin/return_authorizations/_list.html.erb
+++ b/admin/app/views/spree/admin/return_authorizations/_list.html.erb
@@ -1,7 +1,7 @@
 <% if @collection.any? %>
   <div class="table-responsive">
     <table class="table">
-      <thead class="text-muted">
+      <thead>
         <tr>
           <th><%= Spree.t(:number) %></th>
           <th><%= Spree.t(:created_at) %></th>
