--- a/admin/app/views/spree/admin/shared/_refunds.html.erb
+++ b/admin/app/views/spree/admin/shared/_refunds.html.erb
@@ -1,6 +1,6 @@
 <div class="table-responsive card-lg">
   <table class="table table-condensed" id='refunds' data-order-id='<%= @order.number %>'>
-    <thead class="text-muted">
+    <thead>
       <tr data-hook="refunds_header" class="border-bottom">
         <th><%= "#{Spree.t('date')}/#{Spree.t('time')}" %></th>
         <th><%= Spree.t(:amount) %></th>
