--- a/admin/app/views/spree/admin/stock_items/index.html.erb
+++ b/admin/app/views/spree/admin/stock_items/index.html.erb
@@ -12,7 +12,7 @@
   <% if @collection.any? %>
     <div class="table-responsive">
       <table class="table" id="listing_products">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th scope="col"><%= Spree.t(:variant) %></th>
             <th scope="col"><%= Spree.t(:stock_location) %></th>
