--- a/admin/app/views/spree/admin/store_credits/_list.html.erb
+++ b/admin/app/views/spree/admin/store_credits/_list.html.erb
@@ -1,7 +1,7 @@
 <% if @store_credits.any? %>
   <div class="table-responsive">
     <table class="table">
-      <thead class="text-muted">
+      <thead>
         <th><%= Spree.t(:currency) %></th>
         <th><%= Spree.t('store_credit.allocated') %></th>
         <th><%= Spree.t('store_credit.authorized') %></th>
