--- a/admin/app/views/spree/admin/taxonomies/index.html.erb
+++ b/admin/app/views/spree/admin/taxonomies/index.html.erb
@@ -17,7 +17,7 @@
   <% if @taxonomies.present? %>
     <div class="table-responsive">
       <table class="table" id='listing_taxonomies'>
-        <thead class="text-muted">
+        <thead>
           <tr data-hook="listing_taxonomies_header">
             <th class="no-border handel-head"></th>
             <th><%= Spree.t(:name) %></th>
