--- a/admin/app/views/spree/admin/themes/index.html.erb
+++ b/admin/app/views/spree/admin/themes/index.html.erb
@@ -29,7 +29,7 @@
 <div class="card-lg">
   <div class="table-responsive rounded-lg">
     <table class="table">
-      <thead class="text-muted">
+      <thead>
         <tr>
           <th class="bg-transparent"><%= Spree.t(:theme) %></th>
           <th class="bg-transparent"><%= Spree.t(:status) %></th>
