--- a/admin/app/views/spree/admin/users/index.html.erb
+++ b/admin/app/views/spree/admin/users/index.html.erb
@@ -43,7 +43,7 @@
 
         <div class="table-responsive">
           <table class="table" id="listing_users">
-            <thead class="text-muted">
+            <thead>
               <tr data-hook="admin_users_index_headers">
                 <th scope="col" class="pr-0 w-5">
                   <%= bulk_operations_select_all_checkbox %>
