--- a/admin/app/views/spree/admin/webhooks_subscribers/show.html.erb
+++ b/admin/app/views/spree/admin/webhooks_subscribers/show.html.erb
@@ -30,7 +30,7 @@
       </h5>
     </div>
     <table class="table card-body pb-0">
-      <thead class="text-muted">
+      <thead>
         <tr>
           <th><%= Spree.t('admin.name') %></th>
           <th><%= Spree.t('admin.successful') %></th>
