--- a/admin/app/views/spree/admin/admin_users/index.html.erb
+++ b/admin/app/views/spree/admin/admin_users/index.html.erb
@@ -4,12 +4,12 @@
 <div class="card-lg">
   <div class="table-responsive">
     <table class="table">
-      <thead class="text-muted">
-      <tr>
-        <th><%= Spree.t(:user) %></th>
-        <th><%= Spree.t(:roles) %></th>
-        <th><%= sort_link @search, :created_at, Spree.t(:created_at) %></th>
-      </tr>
+      <thead>
+        <tr>
+          <th class="rounded-lg-top-left"><%= Spree.t(:user) %></th>
+          <th><%= Spree.t(:roles) %></th>
+          <th class="rounded-lg-top-right"><%= sort_link @search, :created_at, Spree.t(:created_at) %></th>
+        </tr>
       </thead>
       <tbody>
         <% @collection.each do |admin_user| %>
