--- a/admin/app/views/spree/admin/digital_assets/_table.html.erb
+++ b/admin/app/views/spree/admin/digital_assets/_table.html.erb
@@ -1,5 +1,5 @@
 <table class="table">
-  <thead class="text-muted">
+  <thead>
     <tr>
       <% if @product.has_variants? %>
         <th><%= Spree.t(:variant) %></th>
