--- a/admin/app/views/spree/admin/invitations/index.html.erb
+++ b/admin/app/views/spree/admin/invitations/index.html.erb
@@ -3,13 +3,13 @@
 <div class="card-lg">
   <div class="table-responsive">
     <table class="table">
-      <thead class="text-muted">
+      <thead>
       <tr>
-        <th><%= Spree.t(:email) %></th>
+        <th class="rounded-lg-top-left"><%= Spree.t(:email) %></th>
         <th><%= Spree.t(:inviter) %></th>
         <th><%= Spree.t(:roles) %></th>
         <th><%= Spree.t(:status) %></th>
-        <th><%= sort_link @search, :created_at, Spree.t(:created_at) %></th>
+        <th class="rounded-lg-top-right"><%= sort_link @search, :created_at, Spree.t(:created_at) %></th>
         <th></th>
       </tr>
       </thead>
