--- a/admin/app/views/spree/admin/orders/customer_returns/_return_item_decision.html.erb
+++ b/admin/app/views/spree/admin/orders/customer_returns/_return_item_decision.html.erb
@@ -1,5 +1,5 @@
 <table class="show return-items-table table table-condensed index">
-  <thead class="text-muted">
+  <thead>
     <tr>
       <th><%= Spree.t(:product) %></th>
       <th><%= Spree.t(:pre_tax_amount) %></th>
