--- a/admin/app/views/spree/admin/reimbursements/show.html.erb
+++ b/admin/app/views/spree/admin/reimbursements/show.html.erb
@@ -21,7 +21,7 @@ locals: {
   </div>
   <div class="card-body p-0">
     <table class="table reimbursement-reimbursement-items-table">
-      <thead class="text-muted">
+      <thead>
         <tr>
           <th><%= Spree.t(:product) %></th>
           <th><%= Spree.t(:preferred_reimbursement_type) %></th>
