--- a/admin/app/views/spree/admin/reports/_report.html.erb
+++ b/admin/app/views/spree/admin/reports/_report.html.erb
@@ -1,7 +1,7 @@
 <div class="card-lg">
   <div class="table-responsive">
     <table class="table">
-      <thead class="text-muted">
+      <thead>
         <tr>
           <% @report.line_item_class.headers.each do |header| %>
             <th><%= header[:label] %></th>
