--- a/admin/app/views/spree/admin/return_authorization_reasons/index.html.erb
+++ b/admin/app/views/spree/admin/return_authorization_reasons/index.html.erb
@@ -8,7 +8,7 @@
   <% if @collection.any? %>
     <div class="table-responsive">
       <table class="table">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th><%= Spree.t(:name) %></th>
             <th><%= Spree.t(:status) %></th>
