--- a/admin/app/views/spree/admin/stock_locations/index.html.erb
+++ b/admin/app/views/spree/admin/stock_locations/index.html.erb
@@ -9,7 +9,7 @@
   <% if @collection.any? %>
     <div class="table-responsive">
       <table class="table">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th><%= Spree.t(:name) %></th>
             <th><%= Spree.t(:country) %></th>
