--- a/admin/app/views/spree/admin/stock_transfers/index.html.erb
+++ b/admin/app/views/spree/admin/stock_transfers/index.html.erb
@@ -15,7 +15,7 @@
   <% if @collection.any? %>
     <div class="table-responsive">
       <table class="table" id="listing_products">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th scope="col"><%= Spree.t(:number) %></th>
             <th scope="col"><%= Spree.t(:reference) %></th>
