--- a/admin/app/views/spree/admin/store_credit_categories/index.html.erb
+++ b/admin/app/views/spree/admin/store_credit_categories/index.html.erb
@@ -10,7 +10,7 @@
   <% if @collection.any? %>
     <div class="table-responsive">
       <table class="table">
-        <thead class="text-muted">
+        <thead>
           <tr>
             <th><%= Spree.t(:name) %></th>
             <th></th>
