--- a/admin/app/views/spree/admin/tax_rates/index.html.erb
+++ b/admin/app/views/spree/admin/tax_rates/index.html.erb
@@ -12,7 +12,7 @@
   <% if @collection.any? %>
     <div class="table-responsive">
       <table class="table">
-        <thead class="text-muted">
+        <thead>
           <tr data-hook="rate_header">
             <th><%= Spree.t(:name) %></th>
             <th><%= Spree.t(:tax_category) %></th>
