--- a/admin/app/views/spree/admin/invitations/new.html.erb
+++ b/admin/app/views/spree/admin/invitations/new.html.erb
@@ -12,7 +12,7 @@
         </div>
         <% if can?(:manage, Spree::Role) %>
           <div class="form-group">
-            <%= f.label :role, Spree.t(:role) %>
+            <%= f.label :role, Spree.t(:roles) %>
             <%= f.select :role_ids, @roles.map { |role| [role.name, role.id] }, {}, { data: { controller: 'autocomplete-select', 'enable-button-target': 'input' }, multiple: true, required: true } %>
           </div>
         <% end %>
