--- a/admin/app/views/spree/admin/admin_users/new.html.erb
+++ b/admin/app/views/spree/admin/admin_users/new.html.erb
@@ -18,26 +18,7 @@
           <%= @invitation.inviter.name %> has invited you to join <strong><%= @invitation.resource.name %></strong>
         </div>
 
-        <div class="form-group">
-          <%= f.label :email %>
-          <%= f.email_field :email, class: 'form-control', required: true, autofocus: true %>
-        </div>
-        <div class="form-group">
-          <%= f.label :first_name %>
-          <%= f.text_field :first_name, class: 'form-control', required: true %>
-        </div>
-        <div class="form-group">
-          <%= f.label :last_name %>
-          <%= f.text_field :last_name, class: 'form-control', required: true %>
-        </div>
-        <div class="form-group">
-          <%= f.label :password %>
-          <%= f.password_field :password, class: 'form-control', required: true %>
-        </div>
-        <div class="form-group">
-          <%= f.label :password_confirmation %>
-          <%= f.password_field :password_confirmation, class: 'form-control', required: true %>
-        </div>
+        <%= render 'form', f: f %>
       </div>
       <div class="card-footer">
         <%= turbo_save_button_tag(Spree.t('create_a_new_account')) %>
