--- a/admin/app/views/spree/admin/invitations/_invitation.html.erb
+++ b/admin/app/views/spree/admin/invitations/_invitation.html.erb
@@ -34,13 +34,13 @@
           <%= icon('dots', class: 'mr-0') %>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton-<%= invitation.id %>">
-          <%= link_to_with_icon 'copy', Spree.t(:copy_invitation_link), '#', 
+          <%= link_to_with_icon 'copy', Spree.t(:copy_link), '#', 
               class: "dropdown-item", 
               data: { action: "clipboard#copy" } %>
-          <%= link_to_with_icon 'send', Spree.t(:resend_invitation), spree.resend_admin_invitation_path(invitation), 
+          <%= link_to_with_icon 'send', Spree.t('actions.resend'), spree.resend_admin_invitation_path(invitation), 
               class: "dropdown-item", 
               data: { turbo_method: :put, turbo_confirm: Spree.t(:are_you_sure) } %>
-          <%= link_to_with_icon 'trash', Spree.t(:revoke), spree.revoke_admin_invitation_path(invitation), 
+          <%= link_to_with_icon 'trash', Spree.t('actions.revoke'), spree.revoke_admin_invitation_path(invitation), 
               class: "dropdown-item btn-danger", 
               data: { turbo_method: :put, turbo_confirm: Spree.t(:are_you_sure) } %>
         </div>
