Allow editing roles for admin users

--- a/admin/app/views/spree/admin/admin_users/edit.html.erb
+++ b/admin/app/views/spree/admin/admin_users/edit.html.erb
@@ -18,6 +18,15 @@
     <div class="card-body pb-0">    
       <%= render'spree/admin/shared/error_messages', target: @admin_user %>
       <%= render 'form', f: f %>
+      <% if can?(:manage, Spree::Role) %>
+        <div class="form-group">
+          <%= f.label :spree_role_ids, Spree.t(:roles) %>
+          <%= f.select :spree_role_ids,
+                  options_from_collection_for_select(Spree::Role.all, 'id', 'name', @admin_user.spree_roles.pluck(:id)),
+                  { prompt: false },
+                  { multiple: true,  data: { controller: 'autocomplete-select' } } %>          
+        </div>
+      <% end %>
     </div>
     <div class="card-footer">
       <%= turbo_save_button_tag Spree.t('actions.update') %>
