--- a/admin/app/views/spree/admin/pages/index.html.erb
+++ b/admin/app/views/spree/admin/pages/index.html.erb
@@ -13,7 +13,7 @@
         <thead>
           <tr>
             <th><%= Spree.t(:name) %></th>
-            <th><%= Spree.t(:updated) %></th>
+            <th><%= Spree.t(:updated_at) %></th>
           </tr>
         </thead>
         <tbody>
