--- a/admin/app/views/spree/admin/themes/_theme.html.erb
+++ b/admin/app/views/spree/admin/themes/_theme.html.erb
@@ -7,7 +7,7 @@
         <strong><%= theme.name %></strong>
         <p class="mb-0 mt-1">
           <span class="text-muted">
-            <%= Spree.t(:updated) %>: 
+            <%= Spree.t(:updated_at) %>: 
             <%= local_time_ago(theme.updated_at, class: 'with-tip') %>
           </span>
         </p>
