--- a/admin/app/views/spree/admin/shared/_team_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/_team_nav.html.erb
@@ -1,7 +1,7 @@
-<% content_for :page_title, Spree.t(:team) %>
+<% content_for :page_title, Spree.t(:users) %>
 
 <%= content_for(:page_tabs) do %>
-  <%= nav_item(Spree.t(:team), spree.admin_admin_users_path) if can?(:manage, Spree.admin_user_class) %>
+  <%= nav_item(Spree.t(:users), spree.admin_admin_users_path) if can?(:manage, Spree.admin_user_class) %>
   <%= nav_item(Spree.t(:invitations), spree.admin_invitations_path) if can?(:manage, Spree::Invitation) %>
   <%= nav_item(Spree.t(:roles), spree.admin_roles_path) if can?(:manage, Spree::Role) %>
 <% end %>
