--- a/admin/app/views/spree/admin/shared/sidebar/_store_dropdown.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_store_dropdown.html.erb
@@ -31,7 +31,7 @@
   </div>
 <% end %>
 
-<div class="border-bottom border-bottom-dashed pb-2 d-flex align-items-center justify-content-between pr-1" id="store-menu" data-turbo-permanent>
+<div class="store-dropdown sticky-top" id="store-menu" data-turbo-permanent>
   <div class="dropdown">
     <button type="button" class="btn d-flex align-items-center justify-content-between text-left dropdown-toggle d-flex align-items-center gap-2"
             data-toggle="dropdown" aria-expanded="false">
