Fix integrations nav to actually link to the new integrations tab

--- a/admin/app/views/spree/admin/shared/sidebar/_integrations_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_integrations_nav.html.erb
@@ -1,7 +1,3 @@
 <li class="nav-item">
-  <span class="nav-link d-flex align-items-center pr-1 cursor-default with-tip" title="Connect your store to third-party services to automate your business processes.">
-    <%= icon 'plug' %>
-    <span><%= Spree.t(:integrations) %></span>
-    <span class="badge ml-auto rounded-pill">Coming soon!</span>
-  </span>
+  <%= nav_item(Spree.t(:integrations), spree.admin_integrations_path, icon: 'plug') %>
 </li>
