--- a/admin/app/assets/stylesheets/spree/admin/components/_media_form.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_media_form.scss
@@ -13,9 +13,15 @@
   color: $gray-500;
 
   &:hover {
-    background-color: $gray-25;
-    border-color: $gray-100;
-    color: $gray-700;
+    background-color: $action;
+    border-color: rgba($blue, 0.5);
+    color: rgba($blue, 0.8);
+  }
+
+  &:active {
+    background-color: $action;
+    border-color: rgba($blue, 0.5);
+    box-shadow: 0 0 0 2px $white, 0 0 0 4px $blue !important;
   }
 }
 
@@ -55,6 +61,10 @@
     position: relative;
     justify-content: space-between;
     align-items: flex-start;
+    transition-property: box-shadow;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in-out;
+    box-shadow: rgba(209, 217, 224, 0.5) 0px 0px 0px 1px;
 
     & img {
       top: 0;
@@ -78,9 +88,11 @@
         display: inline !important;
       }
 
-      & img {
-        opacity: 0.5;
-      }
+      box-shadow: rgba(209, 217, 224, 0.8) 0px 0px 0px 1px, rgba(37, 41, 46, 0.04) 0px 3px 6px -3px, rgba(37, 41, 46, 0.12) 0px 2px 6px 0px !important;
+    }
+
+    &:has(input:checked) {
+      box-shadow: 0 0 0 2px $blue !important;
     }
 
     &:first-of-type {
