--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -161,14 +161,14 @@ $dropdown-header-color: $gray-500 !default;
 
 $modal-backdrop-bg:                 $white !default;
 $modal-backdrop-opacity:            0.8 !default;
-$modal-content-border-color: $border-color !default;
+$modal-content-border-color:        $gray-50 !default;
+$modal-content-border-width:        3px !default;
 $modal-header-padding: 1rem 1.25rem 1rem 1.25rem !default;
 $modal-inner-padding: 1rem 1.25rem 1rem 1.25rem !default;
 $modal-fade-transform:              translate(0, 0) !default;
 $modal-show-transform:              none !default;
 $modal-transition:                  transform .2s ease-out !default;
 $modal-scale-transform:             scale(1.02) !default;
-$modal-content-border-width: 0px !default;
 $modal-header-border-width: 1px !default;
 $modal-content-box-shadow-xs: rgba(0, 0, 0, 0.08) 0px 0px 0px 1px, rgba(0, 0, 0, 0.02) 0px 1px 1px 0px, rgba(0, 0, 0, 0.04) 0px 8px 16px -4px, rgba(0, 0, 0, 0.06) 0px 24px 32px -8px !default;
 $modal-content-box-shadow-sm-up: $modal-content-box-shadow-xs !default;
