--- a/admin/app/views/spree/admin/line_items/new.html.erb
+++ b/admin/app/views/spree/admin/line_items/new.html.erb
@@ -17,8 +17,8 @@
           </p>
         </div>
       </div>
-      <div class="modal-footer border-top">
-        <div class="d-flex gap-2 m-0 align-items-center">
+      <div class="modal-footer">
+        <div class="d-flex gap-2 m-0 align-items-center mr-auto">
           <%= form.label :quantity, Spree.t(:quantity), class: "mb-0" %>
           <%= form.number_field :quantity, class: "form-control", min: 1 %>
         </div>
