--- a/admin/app/views/spree/admin/payment_methods/index.html.erb
+++ b/admin/app/views/spree/admin/payment_methods/index.html.erb
@@ -6,22 +6,23 @@
   <div class="table-responsive">
     <table class="table">
       <thead>
-      <tr>
-        <th></th>
-        <th><%= Spree.t(:payment_method) %></th>
-        <th><%= Spree.t(:visibility) %></th>
-        <th class="text-center"><%= Spree.t(:active) %></th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody data-controller="sortable" data-sortable-handle-value=".move-handle" data-sortable-resource-name-value="payment_method" data-sortable-response-kind-value="turbo-stream">
-      <%= render partial: 'spree/admin/payment_methods/payment_method', collection: @payment_methods %>
-    </tbody>
-  </table>
+        <tr>
+          <th></th>
+          <th><%= Spree.t(:payment_method) %></th>
+          <th><%= Spree.t(:visibility) %></th>
+          <th class="text-center"><%= Spree.t(:active) %></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody data-controller="sortable" data-sortable-handle-value=".move-handle" data-sortable-resource-name-value="payment_method" data-sortable-response-kind-value="turbo-stream">
+        <%= render partial: 'spree/admin/payment_methods/payment_method', collection: @payment_methods %>
+      </tbody>
+    </table>
+  </div>
 </div>
 
 <% if available_payment_methods.present? && can?(:create, Spree::PaymentMethod) %>
-  <h5 class="pb-2 pt-3">Available Payment Methods</h5>
+  <h6 class="pb-2 pt-3">Available Payment Methods</h6>
   <div class="card-lg">
     <div class="table-responsive">
       <table class="table">
