--- a/admin/app/views/spree/admin/shared/_multi_product_picker.html.erb
+++ b/admin/app/views/spree/admin/shared/_multi_product_picker.html.erb
@@ -15,7 +15,7 @@
           </p>
         </div>
       </div>
-      <div class="modal-footer border-top">
+      <div class="modal-footer">
         <%= modal_discard_button %>
         <%= turbo_save_button_tag Spree.t(:add_selected_products), class: 'btn btn-primary', disabled: true, data: { search_picker_target: :submit } %>
       </div>
