--- a/admin/app/views/spree/admin/invitations/_invitation.html.erb
+++ b/admin/app/views/spree/admin/invitations/_invitation.html.erb
@@ -3,7 +3,7 @@
     <%= invitation.email %>
   </td>
   <td class="w-10">
-    <%= link_to invitation.inviter.name, spree.admin_admin_user_path(invitation.inviter) %>
+    <%= invitation.inviter.name %>
   </td>
   <td class="w-20">
     <% invitation.roles.each do |role| %>
