--- a/admin/app/views/spree/admin/shared/_team_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/_team_nav.html.erb
@@ -2,7 +2,7 @@
 
 <%= content_for(:page_tabs) do %>
   <%= nav_item(Spree.t(:users), spree.admin_admin_users_path) if can?(:manage, Spree.admin_user_class) %>
-  <%= nav_item(Spree.t(:invitations), spree.admin_invitations_path) if can?(:manage, Spree::Invitation) %>
+  <%= nav_item(Spree.t(:invitations), [:admin, @parent, :invitations]) if can?(:manage, Spree::Invitation) %>
   <%= nav_item(Spree.t(:roles), spree.admin_roles_path) if can?(:manage, Spree::Role) %>
 <% end %>
 
