--- a/admin/app/views/spree/admin/resource_users/edit.html.erb
+++ b/admin/app/views/spree/admin/resource_users/edit.html.erb
@@ -17,7 +17,18 @@
   <%= form_for [:admin, @admin_user], as: :admin_user, url: spree.admin_admin_user_path(@admin_user), method: :put do |f| %>
     <div class="card-body">    
       <%= render'spree/admin/shared/error_messages', target: @admin_user %>
-      <%= render 'form', f: f %>
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, class: 'form-control', required: true, autofocus: true %>
+      </div>
+      <div class="form-group">
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name, class: 'form-control', required: true %>
+      </div>
+      <div class="form-group">
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name, class: 'form-control', required: true %>
+      </div>
       <% if can?(:manage, Spree::Role) %>
         <div class="form-group">
           <%= f.label :spree_role_ids, Spree.t(:roles) %>
