--- a/admin/app/views/spree/admin/resource_users/index.html.erb
+++ b/admin/app/views/spree/admin/resource_users/index.html.erb
@@ -11,24 +11,24 @@
         </tr>
       </thead>
       <tbody>
-        <% @collection.each do |admin_user| %>
-          <tr id="<%= spree_dom_id admin_user %>" class="cursor-pointer" data-controller="row-link">
+        <% @collection.each do |user| %>
+          <tr id="<%= spree_dom_id user %>" class="cursor-pointer" data-controller="row-link">
             <td class="w-50" data-action="click->row-link#openLink">
-              <%= link_to spree.admin_admin_user_path(admin_user), data: { row_link_target: :link }, class: 'd-flex align-items-center' do %>
-                <%= render_avatar(admin_user, width: 48, height: 48, class: 'mr-3 avatar') %>
+              <%= link_to [:admin, @parent, user], data: { row_link_target: :link }, class: 'd-flex align-items-center' do %>
+                <%= render_avatar(user, width: 48, height: 48, class: 'mr-3 avatar') %>
                 <div class="d-flex flex-column">
-                  <%= admin_user.name %>
-                  <span class="text-muted"><%= admin_user.email %></span>
+                  <%= user.name %>
+                  <span class="text-muted"><%= user.email %></span>
                 </div>
               <% end %>
             </td>
             <td class="w-30" data-action="click->row-link#openLink">
-              <% admin_user.spree_roles.each do |role| %>
+              <% user.spree_roles.each do |role| %>
                 <span class="badge badge-light"><%= role.name %></span>
               <% end %>
             </td>
             <td class="w-20">
-              <%= local_time(admin_user.created_at) %>
+              <%= local_time(user.created_at) %>
             </td>
           </tr>
         <% end %>
