--- a/admin/app/views/spree/admin/admin_users/edit.html.erb
+++ b/admin/app/views/spree/admin/admin_users/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :page_title do %>
-  <%= page_header_back_button spree.admin_admin_users_path, @admin_user %>
+  <%= page_header_back_button spree.admin_admin_users_path %>
   <%= @admin_user.name %>
 <% end %>
 
@@ -17,23 +17,12 @@
   <%= form_for [:admin, @admin_user], as: :admin_user, url: spree.admin_admin_user_path(@admin_user), method: :put do |f| %>
     <div class="card-body">    
       <%= render'spree/admin/shared/error_messages', target: @admin_user %>
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, class: 'form-control', required: true, autofocus: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :first_name %>
-        <%= f.text_field :first_name, class: 'form-control', required: true %>
-      </div>
-      <div class="form-group">
-        <%= f.label :last_name %>
-        <%= f.text_field :last_name, class: 'form-control', required: true %>
-      </div>
-      <% if can?(:manage, Spree::Role) %>
+      <%= render 'form', f: f %>
+      <% if can?(:manage, Spree::Role) && @roles.any? %>
         <div class="form-group">
           <%= f.label :spree_role_ids, Spree.t(:roles) %>
           <%= f.select :spree_role_ids,
-                  options_from_collection_for_select(Spree::Role.all, 'id', 'name', @admin_user.spree_roles.pluck(:id)),
+                  options_from_collection_for_select(@roles, 'id', 'name', @admin_user.spree_roles.pluck(:id)),
                   { prompt: false },
                   { multiple: true,  data: { controller: 'autocomplete-select' } } %>          
         </div>
